--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^9.22.1",
     "nodemon": "^2.0.22"
   }
 }
